refactor: improve readability